--- a/package.json
+++ b/package.json
@@ -21,6 +21,12 @@
     "vue-router": "^4.2.5"
   },
   "dependencies": {
-    "@pinia/nuxt": "^0.4.11"
+    "@pinia/nuxt": "^0.4.11",
+    "lodash": "^4.17.21",
+    "marked": "^9.1.1",
+    "replicate": "^0.20.1",
+    "replicate-webhook-proxy": "^0.0.2",
+    "tiny-emitter": "^2.1.0",
+    "uuid": "^9.0.1"
   }
 }
