--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.4.11",
+    "@vercel/analytics": "^1.1.1",
     "lodash": "^4.17.21",
     "marked": "^9.1.1",
     "replicate": "^0.20.1",
